--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
     color: white;
 }
 
-.container-fluid {
+.container-title {
     padding: 3% 15%;
 }
 
@@ -51,3 +51,36 @@ h1 {
     width: 60%;
     transform: rotate(25deg);
 }
+
+/* Features section */
+
+.feature-heading {
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+}
+
+.feature-p {
+    color: #8f8f8f;
+}
+
+.feature-div {
+    text-align: center;
+    padding-top: 3.125rem;
+}
+
+.icon {
+    color: #ef8172;    
+}
+
+.icon:hover {
+    color: #ff4c68;
+}
+.container-features {
+    padding: 7% 15%;
+}
+
+.feature-row {
+    padding-top: 50px;
+}
+
