--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,10 @@ body {
     color: white;
 }
 
-.container-title {
-    padding: 3% 15%;
+.container-fluid {
+    padding: 3% 15% 7%;
 }
+
 
 h1 {
     font-family: 'Montserrat', sans-serif;
@@ -46,13 +47,22 @@ h1 {
     margin: 5% 3% 5% 0;
 }
 
-/* Title imagr */
+/* Title img */
 .title-img {
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 25%;
+    
 }
 
 /* Features section */
+
+#features {
+    background-color: #fff;
+    position: relative;
+    padding: 7% 15%;
+}
 
 .feature-heading {
     font-weight: bold;
@@ -76,11 +86,54 @@ h1 {
 .icon:hover {
     color: #ff4c68;
 }
-.container-features {
-    padding: 7% 15%;
-}
 
 .feature-row {
     padding-top: 50px;
 }
 
+/* Testimonial section */
+
+#testimonials {
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff;
+}
+
+h2 {
+    font-family: "Montserrat";
+    font-weight: bold;
+    font-size: 3em;
+    line-height: 1.5;
+}
+
+.testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+#press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
+}
+
+.carousel-item {
+    padding: 7% 15% ;
+}
+
+/* Pricing */
+
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column {
+    padding: 3% 2%;
+}
