--- a/css/styles.css
+++ b/css/styles.css
@@ -137,3 +137,14 @@ h2 {
 .pricing-column {
     padding: 3% 2%;
 }
+
+@media (max-width: 1028px) {
+
+    #title {
+        text-align: center;
+    }
+    .title-img {
+        position: static;
+        transform: rotate(0);
+    }
+}
